2019-09-09  Charlie Zender  <zender@uci.edu>

	* In new SGS, pass sgs_msk_nm through ncremap

2019-09-08  Charlie Zender  <zender@uci.edu>

	* In new SGS, compute sgs_msk (when requested) based on sgs_frc

	* In new SGS, normalize all variables (except sgs_frc and sgs_msk) by wgt_vld_frc

2019-09-07  Charlie Zender  <zender@uci.edu>

	* Check for _FillValue in sgs_frc_in (e.g., ELM landfrac) in GSG regridding

2019-09-06  Charlie Zender  <zender@uci.edu>

	* Expose linear/logarithmic vertical interpolation option to user control with --ntp_mth=lin|log

2019-09-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha06: XTerra';git push
	git tag -a 4.8.2-alpha06 -m 'rhea SLURM';git push --tags

	* Update rhea queue to SLURM

2019-08-27  Charlie Zender  <zender@uci.edu>

	* Build on rhea with bld/Makefile, deprecate old rhea modules

	* NCO 4.8.2-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha05: Oceanside';git push
	git tag -a 4.8.2-alpha05 -m 'ncremap: OpenMP5.0	work;blues,cheyenne,rhea updates';git push --tags

	* Update MANIFEST, annotate libnco.h

	* Use /gpfs/alpine not /lustre/atlas1 as ~/data on rhea and restore grids/maps contents there

	* Fix bld/Makefile by deprecating ncap.h reference in mpncwa.c

2019-08-23  Charlie Zender  <zender@uci.edu>

	* Quiet debugging output in nco_rgr_wgt()

	* Add stubs for OpenMP5.0 support to exploit GPUs on GCC >= 9.0

2019-08-21  Charlie Zender  <zender@uci.edu>

	* Add ERWG to ncremap on blues via NCO_PATH_OVERRIDE=Yes and module load ncl

	* Remove 'soft' command from blues NCO_PATH_OVERRIDE code since	CentOS7 partition uses 'module'

2019-08-20  Charlie Zender  <zender@uci.edu>

	* Merge Henry's patch to allow SCRIP grids without grid_imask or grid_area variables

	* Fix handling of fnc_nm and fp_stderr by Intel Compiler in nco_ply_lst.c

2019-08-14  Charlie Zender  <zender@uci.edu>
